# mar26_bde_velib

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
analytics/: analytics.py
docker/: api.Dockerfile  streamlit.Dockerfile
docker/stack/: docker-compose.yml
docker/stack/init-mongo/: 01-create-users.js
docker/stack/init-postgres/: 01-create-users.sh
docker/stack/python/: Dockerfile  crontab.txt  requirements.txt
models/: model.pkl  random_forest_bikes_2h.joblib
references/: schema.sql  uml_erd.md
src/: config.py
src/airflow/: velib_batch_pipeline.py
src/analytics/: analytics.py
src/api/: dependencies.py  main.py
src/api/core/: config.py  security.py
src/api/routers/: auth.py  predictions.py  stations.py  statistiques.py  test.py
src/api/schemas/: auth.py  predictions.py  stations.py  statistiques.py  test.py
src/collecte/: velib_client.py  weather_client.py
src/config/: logger_config.py
src/data/: Mongo_Request.py  Postgre_Request.py  collect.py  communes.csv  database.py  import.py  make_dataset.py  transform.py
src/features/: build_features.py
src/ml/: analytics.py  predict.py  train_model.py
src/models/: fake_predictor.py  predict.py  train.py
src/streamlit/: api.py  app.py  test.py
streamlit/: app.py
streamlit/clean_data/: fulldata.csv
streamlit/pages/: accueil.py  map_station.py  metro.py  station.py  test.py
tests/: conftest.py  test_api.py
tests/api/: test_predictions.py  test_stations.py  test_statistiques.py
(+8 files in other folders)
