[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mar26-bde-velib"
version = "0.1.0"
description = "Pipeline data engineering et API de prédiction pour Vélib'"
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "OpenAI for user project completion"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pandas>=2.2,<3.0",
  "numpy>=2.1,<3.0",
  "scikit-learn>=1.5,<2.0",
  "joblib>=1.4,<2.0",
  "requests>=2.32,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pymongo>=4.8,<5.0",
  "python-dotenv>=1.0,<2.0",
  "pydantic-settings>=2.6,<3.0",
  "streamlit>=1.39,<2.0",
  "plotly>=5.24,<6.0",
  "matplotlib>=3.9,<4.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]
